# ChangeLog for dev-java/jdom-jaxen
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  25 May 2007; Alistair John Bush <ali_bush@gentoo.org> ChangeLog:
  Initial ebuild to resolve circular deps with hdom and jaxen
