@@ -1,2 +1,4 @@
 DIST jdom-b9.tar.gz 3417274 RMD160 af44cb104946cc05e1a55a23951c364d08c4cc89 SHA1 f28f676809e3333254e6041e342f2d4e314b4908 SHA256 00c4ddf640b17768582bba0e8b8a2584fe42b2540a98d1bfa276fa43bef1a676
+EBUILD jdom-jaxen-1.0_beta9-r1.ebuild 1186 RMD160 2d15636baee24adf8f082a1b4282663ba297ea21 SHA1 a5b9ae055527dfbddfc76f48d9d5a947924af3fa SHA256 f3bdba1e81fefa1b35f8a8dbad02fd7f6920ae97d5abc3a22a5aa445913c702e
 EBUILD jdom-jaxen-1.0_beta9.ebuild 1182 RMD160 bbc08c33f5fbc0b58c225258229db2f889d0dcd2 SHA1 3241e90ed113fa7b32bd84c7b4740678ed78ab7c SHA256 28ce282fe6ab6eb68631f7682c85ce7f33ec74e64de31d85e73ddafce4666437
+MISC ChangeLog 377 RMD160 943bfdb813e1d4afa8bbf1f33926fbc5507aa768 SHA1 0633a2481e8aeefce02ea6037905e1ea46435319 SHA256 cd448225d68e4c8c7f2db47e1444f0447e79c0249af77514143cb69eadafe894
